Move to linux...still

--- a/.config/i3status/i3status.conf
+++ b/.config/i3status/i3status.conf
@@ -5,7 +5,7 @@ general {
 order += "disk /"
 order += "volume master"
 order += "wireless _first_"
-order += "battery 1"
+order += "battery 0"
 order += "load"
 order += "tztime local"
 
@@ -22,8 +22,8 @@ volume master {
   mixer_idx = 0
 }
 
-battery 1 {
-  format = "%status %percentage %remaining"
+battery 0 {
+  format = "%status %percentage"
   status_bat = ""
   status_chr = ""
   status_full = ""
