--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,27 +1,9 @@
 ###################### i3
 
-set_from_resource $darkred     color1  #000000
-set_from_resource $red         color9  #000000
-set_from_resource $darkgreen   color2  #000000
-set_from_resource $green       color10 #000000
-set_from_resource $darkyellow  color3  #000000
-set_from_resource $yellow      color11 #000000
-set_from_resource $darkblue    color4  #000000
-set_from_resource $blue        color12 #000000
-set_from_resource $darkmagenta color5  #000000
-set_from_resource $magenta     color13 #000000
-set_from_resource $darkcyan    color6  #000000
-set_from_resource $cyan        color14 #000000
-set_from_resource $darkwhite   color7  #000000
-set_from_resource $white       color15 #000000
-# Use custom colors for black
-set $black       #282828
-set $darkblack   #1d2021
-set $transparent #00000000
-
-set $height 34
-
 set $mod Mod4
+
+## Start programs at i3 launch
+exec --no-startup-id dropbox start
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -37,11 +19,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec rofi -show run
 
 # change focus
 bindsym $mod+j focus left
@@ -165,49 +143,40 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 ### Sexiness
+
 ## Background
 exec --no-startup-id feh --bg-scale ~/Pictures/bg.jpg
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
 bar {
-#    verbose yes
-  status_command i3blocks
-  i3bar_command i3bar -t
+  status_command i3status --config ~/.config/i3status/i3status.conf
   position top
-  font xft:Overpass 12, FontAwesome 12
+  font xft:Overpass 12
   strip_workspace_numbers yes
-  separator_symbol "■"
-  bindsym button4 nop
-  bindsym button5 nop
-  tray_padding 0
-  height $height
+  separator_symbol "  "
+  height 34
   colors {
-    statusline         $white
-    background         $transparent
-    separator          $transparent
-    #                  BORDER       BACKGROUND   TEXT
-    focused_workspace  $transparent $transparent $darkwhite
-    inactive_workspace $transparent $transparent $white
-    active_workspace   $transparent $transparent $white
-    urgent_workspace   $darkred     $darkred     $transparent
-    binding_mode       $darkred     $darkred     $transparent
+    statusline #ffffff
   }
 }
 
 # Gaps
-gaps outer 10
-gaps inner 10
+for_window [class="^.*"] border pixel 1
+gaps outer 0
+gaps inner 15
+smart_gaps on
+
+# Colors
 
 # lock
 bindsym $mod+shift+x exec i3lock
 
 ### Screeeennnshooootttsss ###
 # Print screen focused window
-bindsym Print exec scrot -u '%Y%m%d_%H%M%S.png' -e 'mv $f ~/Pictures/shots/'
+bindsym Print exec scrot -u 'Screenshot_%Y-%m-%d_%H.%M.%S.png' -e 'mv $f ~/Dropbox/Screenshots/'
 
 # Print screen entire view
-bindsym $mod+Print exec scrot '%Y%m%d_%Ho%M%S.png' -e 'mv $f ~/Pictures/shots/'
+bindsym $mod+Print exec scrot 'Screenshot_%Y-%m-%d_%H.%M.%S.png' -e 'mv $f ~/Dropbox/Screenshots/'
 
 ### Backlight ###
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # Increase Brightness
