Switch to nord colors back, somehow...

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -75,17 +75,17 @@
   </alias>
 
   <alias>
+    <family>Helvetica</family>
+    <prefer>
+      <family>Overpass</family>
+    </prefer>
+  </alias>
+
+  <alias>
     <family>Overpass</family>
     <default>
       <family>sans-serif</family>
     </default>
-  </alias>
-
-  <alias>
-    <family>Helvetica</family>
-    <prefer>
-      <family>sans-serif</family>
-    </prefer>
   </alias>
 
   <!-- Serif -->
@@ -95,6 +95,13 @@
     <prefer>
       <family>Noto Serif</family>
       <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>Times</family>
+    <prefer>
+      <family>Noto Serif</family>
     </prefer>
   </alias>
 
