--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -59,8 +59,6 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #cccccc
-
 #: Default cursor color
 
 cursor_shape block
@@ -103,7 +101,6 @@ wheel_scroll_multiplier 5.0
 
 #: Mouse {{{
 
-url_color #0087BD
 url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
@@ -342,13 +339,17 @@ inactive_tab_font_style normal
 
 dim_opacity 0.75
 
+# various
+url_color             #0087BD
+cursor                #81A1C1
+
 #: The foreground and background colors
-foreground      #c5d4dd
-background      #3c4c55
+foreground            #D8DEE9
+background            #2E3440
 
 #: The foreground and background for text selected with the mouse
-selection_foreground #c5d4dd
-selection_background #c5d4dd
+selection_foreground  #000000
+selection_background  #FFFACD
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
@@ -360,36 +361,36 @@ dynamic_background_opacity no
 #: the 256 color table as color16 to color255.
 
 # black
-color0  #3c4c55
-color8  #899ba6
+color0   #3B4252
+color8   #4C566A
 
 # red
-color1  #df8c8c
-color9  #f2c38f
+color1   #BF616A
+color9   #BF616A
 
 # green
-color2  #a8ce93
-color10 #a8ce93
+color2   #A3BE8C
+color10  #A3BE8C
 
 # yellow
-color3  #dada93
-color11 #dada93
+color3   #EBCB8B
+color11  #EBCB8B
 
 # blue
-color4  #83afe5
-color12 #83afe5
+color4  #81A1C1
+color12 #81A1C1
 
 # magenta
-color5  #9a93e1
-color13 #d18ec2
+color5   #B48EAD
+color13  #B48EAD
 
 # cyan
-color6  #7fc1ca
-color14 #7fc1ca
+color6   #88C0D0
+color14  #8FBCBB
 
 # white
-color7  #c5d4dd
-color15 #e6eef3
+color7   #E5E9F0
+color15 #B48EAD
 
 #: }}}
 
