--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,9 +3,6 @@
 set $mod Mod1
 set $sup Mod4
 
-## Start programs at i3 launch
-exec --no-startup-id dropbox start
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font xft:Overpass 10
@@ -145,22 +142,6 @@ bindsym $mod+r mode "resize"
 
 ### Sexiness
 
-## Background
-exec --no-startup-id feh --bg-scale ~/Pictures/bg.jpg
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-  status_command i3status --config ~/.config/i3status/i3status.conf
-  position top
-  font xft:Overpass 10
-  strip_workspace_numbers yes
-  separator_symbol "  "
-  height 34
-  colors {
-    statusline #ffffff
-  }
-}
-
 # Gaps
 for_window [class="^.*"] border pixel 1
 gaps outer 0
@@ -178,10 +159,10 @@ bindsym $mod+shift+x exec i3lock
 
 ### Screeeennnshooootttsss ###
 # Print screen focused window
-bindsym Print exec scrot -u 'Screenshot_%Y-%m-%d_%H.%M.%S.png' -e 'xclip -selection clipboard -t "image/png" < $f && mv $f ~/Dropbox/Screenshots/'
+bindsym Print exec scrot -u 'Screenshot_%Y-%m-%d_%H.%M.%S.png' -q 100 -e 'xclip -selection clipboard -t "image/png" < $f && mv $f ~/Dropbox/Screenshots/'
 
 # Print screen entire view
-bindsym $mod+Print exec scrot 'Screenshot_%Y-%m-%d_%H.%M.%S.png' -e 'mv $f ~/Dropbox/Screenshots/'
+bindsym $mod+Print exec scrot -'Screenshot_%Y-%m-%d_%H.%M.%S.png' -q 100 -e 'xclip -selection clipboard -t "image/png" < $f && mv $f ~/Dropbox/Screenshots/'
 
 ### Backlight ###
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # Increase Brightness
@@ -199,3 +180,10 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q set Master 5%+ unmut
 # Lower Volume
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 5%-
 bindsym XF86AudioMute exec --no-startup-id amixer -q sset Master toggle
+
+## Background
+exec --no-startup-id feh --bg-scale ~/Pictures/bg.jpg
+
+## Start programs at i3 launch
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id dropbox start
