--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -339,13 +339,6 @@ inactive_tab_font_style normal
 
 dim_opacity 0.75
 
-# various
-url_color             #0087BD
-
-#: The foreground and background for text selected with the mouse
-selection_foreground  #000000
-selection_background  #FFFACD
-
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 background_opacity         1.0
@@ -355,42 +348,42 @@ dynamic_background_opacity no
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# special
-foreground   #d0cec3
-background   #191d26
-cursor  #d0cec3
+# Base16 Eighties - kitty color config
+# Chris Kempson (http://chriskempson.com)
+background #2d2d2d
+foreground #d3d0c8
+selection_background #d3d0c8
+selection_foreground #2d2d2d
+url_color #a09f93
+cursor #d3d0c8
 
-# black
-color0       #191d26
-color8       #555555
+# normal
+color0 #2d2d2d
+color1 #f2777a
+color2 #99cc99
+color3 #ffcc66
+color4 #6699cc
+color5 #cc99cc
+color6 #66cccc
+color7 #d3d0c8
 
-# red
-color1       #ea5965
-color9       #ea5965
+# bright
+color8 #747369
+color9 #f2777a
+color10 #99cc99
+color11 #ffcc66
+color12 #6699cc
+color13 #cc99cc
+color14 #66cccc
+color15 #d3d0c8
 
-# green
-color2       #ade46b
-color10      #c1e436
-
-# yellow
-color3       #fec254
-color11      #fed96d
-
-# blue
-color4       #2d91d0
-color12      #5555ff
-
-# magenta
-color5       #c9aeff
-color13      #ff55ff
-
-# cyan
-color6       #86e2bf
-color14      #99ffda
-
-# white
-color7       #bbbbbb
-color15      #ffffff
+# extended base16 colors
+color16 #f99157
+color17 #d27b53
+color18 #393939
+color19 #515151
+color20 #a09f93
+color21 #e8e6df
 
 #: }}}
 
