Upgrade with latest changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,11 +44,6 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-
-set -g default-terminal 'tmux-256color'
-# Enable 24 bit true colors
-set -ga terminal-overrides ',xterm-256color*:Tc'
-
 # The modes {
 setw -g mode-attr bold
 setw -gq utf8 on
@@ -71,16 +66,20 @@ set -g message-attr bold
 # }
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'mshkrebtan/base16-tmux'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 ###################
 ### ANSI Colors ###
 ###################
-set -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+
 set -g status-style 'bg=#1E272C,fg=#6A7D89'
-set -g window-status-current-style 'fg=cyan'
+set -g window-status-current-style 'fg=white'
 set -g mode-style 'bg=cyan,fg=black'
 set -g message-style 'bg=black,fg=cyan'
 set -g pane-border-style 'bg=black,fg=#1E272C'
