Latest vim / tmux additions, + stuffs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,17 +25,35 @@ unbind %
 ### DESIGN CHANGES ###
 ######################
 
-## Status bar design
+# panes
+set -g pane-border-fg colour0
+set -g pane-active-border-fg colour238
+
+# toggle statusbar
+bind-key b set-option status
+
 # status line
 set -g status-justify left
+set -g status-bg default
+set -g status-fg default
 set -g status-interval 2
 
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#I #W "
-setw -g window-status-current-format "#I #W "
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+set -g automatic-rename on
+
+# window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# colors
+setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #W "
+setw -g window-status-current-format "#[fg=colour2] •#[fg=colour7] #W "
 setw -g window-status-current-attr dim
+
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -48,8 +66,12 @@ set-option -g bell-action none
 setw -g mode-attr bold
 setw -gq utf8 on
 # }
+
 # The statusbar {
 set -g status-position bottom
+set -g status-justify centre
+set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]•"
+set -g status-right " #[fg=colour4] •#[fg=colour8] #S  "
 set -g status-attr dim
 set -g status-left ''
 set -g status-right ''
@@ -68,6 +90,7 @@ set -g message-attr bold
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 # set -g @plugin 'mshkrebtan/base16-tmux'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 
@@ -76,14 +99,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 ###################
 # set -ga terminal-overrides ",xterm-256color:Tc"
 # set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
-set -g status-style 'bg=#1E272C,fg=#6A7D89'
-set -g window-status-current-style 'fg=white'
-set -g mode-style 'bg=cyan,fg=black'
-set -g message-style 'bg=black,fg=cyan'
-set -g pane-border-style 'bg=black,fg=#1E272C'
-set -g pane-active-border-style 'bg=black,fg=#1E272C'
+# set -g status-style 'bg=#1E272C,fg=#6A7D89'
+# set -g window-status-current-style 'fg=white'
+# set -g mode-style 'bg=cyan,fg=black'
+# set -g message-style 'bg=black,fg=cyan'
+# set -g pane-border-style 'bg=black,fg=#1E272C'
+# set -g pane-active-border-style 'bg=black,fg=#1E272C'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
