--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,6 +97,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 ###################
 ### ANSI Colors ###
 ###################
+set-option -g default-terminal "screen-256color"
 # set -ga terminal-overrides ",xterm-256color:Tc"
 # set -g default-terminal "xterm-256color"
 # set -g default-terminal "screen-256color"
