Get rid of zsh. For now

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ unbind C-b
 bind a send-prefix
 
 # reload ~/.tmux.conf using PREFIX r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Listen to any activity
 set -g bell-action any
@@ -87,6 +87,7 @@ setw -g window-status-bell-attr bold
 set -g message-attr bold
 # }
 # List of plugins
+# set-option -g default-shell /bin/zsh
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
