--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	editor = /usr/bin/nvim
+	editor = /usr/bin/vim
 	excludeFiles = ~/.config/git/.gitignore
 [user]
 	name = Fabien Le Frapper
