Remove ALE / Fix bash wsl issues

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "diagnostic.displayByAle": true,
+  //"diagnostic.displayByAle": true,
   "python.jediEnabled": false,
   "python.formatting.provider": "black"
 }
