--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,14 +1,23 @@
-# [git_state]
-# disabled = true
+[git_state]
+disabled = true
 
-# [git_status]
-# disabled = true
+[git_status]
+disabled = true
 
 # [git_branch]
 # disabled = true
 
-# [rust]
-# disabled = true
+[rust]
+disabled = true
 
-# [package]
-# disabled = true
+[package]
+disabled = true
+
+[aws]
+disabled = true
+
+[nodejs]
+disabled = true
+
+[python]
+disabled = true
