Updates from big pc

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,3 +56,5 @@
 	selected = normal
 	separator = red bold
 	linenumber = normal
+[alias]
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
