--- a/.gitconfig
+++ b/.gitconfig
@@ -58,3 +58,5 @@
 	linenumber = normal
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[push]
+	default = current
