--- a/.gitconfig
+++ b/.gitconfig
@@ -60,3 +60,5 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [push]
 	default = current
+[init]
+	defaultBranch = main
