--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -24,7 +24,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -2022,3 +2022,6 @@ map opt+cmd+,    debug_config
 
 
 include ./theme.conf
+
+map cmd+enter launch --cwd=current --type=window
+map cmd+t launch --cwd=current --type=tab
